package Control;

import Vista.Sub_buscar_sala;

public class Filtro_salas {

	private Sub_buscar_sala sub_buscar_sala;

	public void lista_salas() {

	}

}
