package Control;

import Vista.Vista_horario;
import Database.ConexionOracle;

public class HorarioDAO {

	private ReservarDAO reservarDAO;

	private SalaDAO salaDAO;

	private Vista_horario vista_horario;

	private ConexionOracle conexionOracle;


	public char consultar() {
		return 0;
	}

}
